--- a/vignettes/ex_workflow.Rmd
+++ b/vignettes/ex_workflow.Rmd
@@ -15,8 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r, eval = F}
-
-library(gapindex)
+library(crabpack)
 
 ## Connect to Oracle
 channel <- crabpack::get_connected()
@@ -32,55 +31,55 @@ specimen_data <- crabpack::get_specimen_data(species = "RKC",
 ## Calculate time series of district-level biomass and abundance 
 ## See ?crabpack::calc_bioabund for details on arguments
 
-# Example 1: Male St. Matthew district Blue King Crab between 105 and 199mm
-abundance_biomass <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                             species = "BKC",
-                                             region = "EBS",
-                                             district = "STMATT",
-                                             sex = "male",
-                                             size_min = 105,
-                                             size_max = 119)
+  # Example 1: Male St. Matthew district Blue King Crab between 105 and 199mm
+    smbkc_105TO119 <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                              species = "BKC",
+                                              region = "EBS",
+                                              district = "STMATT",
+                                              sex = "male",
+                                              size_min = 105,
+                                              size_max = 119)
+  
+  
+  # Example 2: Mature female Bristol Bay Red King Crab using ADF&G cutlines
+    matfem_bbrkc <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                            species = "RKC",
+                                            region = "EBS",
+                                            district = "BB",
+                                            crab_category = "mature_female",
+                                            female_maturity = "cutline")
+  
+  
+  # Example 3: Legal-sized male Tanner Crab for both the E166 and W166 districts
+    legal_tanner <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                            species = "TANNER",
+                                            region = "EBS",
+                                            district = "ALL",
+                                            crab_category = "legal_male")
 
 
-# Example 2: Mature female Bristol Bay Red King Crab using ADF&G cutlines
-matfem_bbrkc <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                        species = "RKC",
-                                        region = "EBS",
-                                        district = "BB",
-                                        crab_category = "mature_female",
-                                        female_maturity = "cutline")
-
-
-# Example 3: Legal-sized male Tanner Crab for both the E166 and W166 districts
-legal_tanner <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                        species = "TANNER",
-                                        region = "EBS",
-                                        district = "ALL",
-                                        crab_category = "legal_male")
-
-
-# Example 4: Large, new hardshell male EBS Snow Crab by 1mm bins for 2000-2024
-lg_sc2_snow <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                       species = "SNOW",
-                                       region = "EBS",
-                                       years = c(2000, 2024),
-                                       sex = "male",
-                                       size_min = 95,
-                                       shell_condition = "new_hardshell",
-                                       bin_1mm = TRUE)
+  # Example 4: Large, new hardshell male EBS Snow Crab by 1mm bins for 2000-2024
+    lg_sc2_snow <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                           species = "SNOW",
+                                           region = "EBS",
+                                           years = c(2000, 2024),
+                                           sex = "male",
+                                           size_min = 95,
+                                           shell_condition = "new_hardshell",
+                                           bin_1mm = TRUE)
 
 
 
 ## Calculate time series of station-level CPUE
 ## See ?crabpack::calc_cpue for details on arguments
-
-# Example 1: 2024 EBS Red King Crab by size-sex-maturity category
-cpue <- crabpack::calc_cpue(crab_data = specimen_data,
-                            species = "RKC",
-                            region = "EBS",
-                            district = "ALL",
-                            years = 2024,
-                            crab_category = "all_categories")
+    
+  # Example 1: 2024 EBS Red King Crab by size-sex-maturity category
+    cpue <- crabpack::calc_cpue(crab_data = specimen_data,
+                                species = "RKC",
+                                region = "EBS",
+                                district = "ALL",
+                                years = 2024,
+                                crab_category = "all_categories")
 
 
 
@@ -90,11 +89,11 @@ male_maturity_data <- crabpack::get_male_maturity(species = "TANNER",
                                                   district = "E166",
                                                   channel = channel)
 
-# Unpack df: proportion of morphometrically mature male crabs by size 
-proportion_mature <- male_maturity_data$male_mat_ratio
-
-# Unpack df: model parameter estimates of 50% probability of maturity at size
-matmodel_params <- male_maturity_data$model_parameters
+  # Unpack df: proportion of morphometrically mature male crabs by size 
+    proportion_mature <- male_maturity_data$male_mat_ratio
+  
+  # Unpack df: model parameter estimates of 50% probability of maturity at size
+    matmodel_params <- male_maturity_data$model_parameters
 
 
 ```
