add a rmd for reference tables; add headers to rmd

--- a/vignettes/reference_tables.Rmd
+++ b/vignettes/reference_tables.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Survey History"
+title: "Reference Tables"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Example Workflow}
