--- a/vignettes/ex_workflow.Rmd
+++ b/vignettes/ex_workflow.Rmd
@@ -30,7 +30,8 @@ specimen_data <- crabpack::get_specimen_data(species = "RKC",
 
 ## Calculate time series of district-level biomass and abundance 
 ## See ?crabpack::calc_bioabund for details on arguments
-## Note: for each example, please verify that you have the appropriate species data loaded
+## Note: for each example, please verify that you have the appropriate 
+## species data loaded
 
   # Example 1: Mature female Bristol Bay Red King Crab using ADF&G cutlines
     matfem_bbrkc <- crabpack::calc_bioabund(crab_data = specimen_data,
