--- a/vignettes/ex_workflow.Rmd
+++ b/vignettes/ex_workflow.Rmd
@@ -17,89 +17,114 @@ knitr::opts_chunk$set(
 )
 ```
 
+# Load package
+
 ```{r, eval = F}
 library(crabpack)
 ```
 
 # Connect to Oracle
+
 ```{r, eval = F}
-## Connect to Oracle via AKFIN database (default)
-channel <- crabpack::get_connected()
+# Connect to Oracle via AKFIN database (default)
+  channel <- crabpack::get_connected()
 
-## Connect to Oracle via AFSC database (NOAA AFSC users only)
-channel <- crabpack::get_connected(db = "AFSC)
+# Connect to Oracle via AFSC database (NOAA AFSC users only)
+  channel <- crabpack::get_connected(db = "AFSC")
 
-## Set local Kodiak server access (Kodiak Fisheries Research Center users only)
-channel <- "KOD"
+# Set local Kodiak server access (Kodiak Fisheries Research Center users only)
+  channel <- "KOD"
 ```
 
 # Pull specimen data
+
 ```{r, eval = F}
-specimen_data <- crabpack::get_specimen_data(species = "RKC",
+species <- "RKC"
+specimen_data <- crabpack::get_specimen_data(species = species,
                                              region = "EBS",
                                              years = c(1975:2024),
                                              channel = channel)
 ```
 
-# Calculate time series of district-level biomass and abundance  
-See `?crabpack::calc_bioabund` for details on arguments
-*Note: for each example, please verify that you have the appropriate species data loaded*
+<br>
+
+# Calculate time series of district-level biomass and abundance
+
+See `?crabpack::calc_bioabund` for details on arguments\
+***Note:** for each example, please verify that you have the appropriate
+species data loaded*
+
+**Example 1:** Mature female Bristol Bay Red King Crab using ADF&G
+cutlines
 
 ```{r, eval = F}
-# Example 1: Mature female Bristol Bay Red King Crab using ADF&G cutlines
-  matfem_bbrkc <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                          species = "RKC",
-                                          region = "EBS",
-                                          district = "BB",
-                                          crab_category = "mature_female",
-                                          female_maturity = "cutline")
-
-
-# Example 2: Male St. Matthew district Blue King Crab between 105 and 199mm
-  smbkc_105TO119 <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                            species = "BKC",
-                                            region = "EBS",
-                                            district = "STMATT",
-                                            sex = "male",
-                                            size_min = 105,
-                                            size_max = 119)
-  
-  
-# Example 3: Legal-sized male Tanner Crab for both the E166 and W166 districts
-  legal_tanner <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                          species = "TANNER",
-                                          region = "EBS",
-                                          district = "ALL",
-                                          crab_category = "legal_male")
-
-
-# Example 4: Large, new hardshell male EBS Snow Crab by 1mm bins for 2000-2024   
-  lg_sc2_snow <- crabpack::calc_bioabund(crab_data = specimen_data,
-                                          species = "SNOW",
-                                         region = "EBS",
-                                         years = c(2000, 2024),
-                                         sex = "male",
-                                         size_min = 95,
-                                         shell_condition = "new_hardshell",
-                                         bin_1mm = TRUE)
+matfem_bbrkc <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                        species = "RKC",
+                                        region = "EBS",
+                                        district = "BB",
+                                        crab_category = "mature_female",
+                                        female_maturity = "cutline")
 ```
 
+**Example 2:** Male St. Matthew district Blue King Crab between 105 and
+199mm
+
+```{r, eval = F}
+smbkc_105TO119 <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                          species = "BKC",
+                                          region = "EBS",
+                                          district = "STMATT",
+                                          sex = "male",
+                                          size_min = 105,
+                                          size_max = 119)
+```
+
+**Example 3:** Legal-sized male Tanner Crab for both the E166 and W166
+districts
+
+```{r, eval = F}
+legal_tanner <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                        species = "TANNER",
+                                        region = "EBS",
+                                        district = "ALL",
+                                        crab_category = "legal_male")
+```
+
+**Example 4:** Large, new hardshell male EBS Snow Crab by 1mm bins for
+2000-2024
+
+```{r, eval = F}
+lg_sc2_snow <- crabpack::calc_bioabund(crab_data = specimen_data,
+                                       species = "SNOW",
+                                       region = "EBS",
+                                       years = c(2000, 2024),
+                                       sex = "male",
+                                       size_min = 95,
+                                       shell_condition = "new_hardshell",
+                                       bin_1mm = TRUE)
+```
+
+<br>
 
 # Calculate time series of station-level CPUE
+
 See `?crabpack::calc_cpue` for details on arguments
 
+**Example 1:** 2024 EBS Red King Crab by size-sex-maturity category
+
 ```{r, eval = F}
-# Example 1: 2024 EBS Red King Crab by size-sex-maturity category 
-  cpue <- crabpack::calc_cpue(crab_data = specimen_data,
-                              species = "RKC",
-                              region = "EBS",
-                              district = "ALL",
-                              years = 2024,
-                              crab_category = "all_categories")
+cpue <- crabpack::calc_cpue(crab_data = specimen_data,
+                            species = "RKC",
+                            region = "EBS",
+                            district = "ALL",
+                            years = 2024,
+                            crab_category = "all_categories")
 ```
 
+<br>
 
-# Pull data on Chionoecetes spp. male morphometric maturity estimation 
+# Pull data on *Chionoecetes* spp. male morphometric maturity estimation
+
 ```{r, eval = F}
 male_maturity_data <- crabpack::get_male_maturity(species = "TANNER",
                                                   region = "EBS",
@@ -113,3 +138,4 @@ male_maturity_data <- crabpack::get_male_maturity(species = "TANNER",
     matmodel_params <- male_maturity_data$model_parameters
 ```
 
+<br>
